Removed TCharToWide
Removed CWnd::GetWindowString
Removed CWnd::GetClassString
Removed CWnd::GetDlgItemString
Removed CWnd::IsContainer
Removed CWnd::IsDocker
Removed CWnd::IsFrame
Removed CWnd::IsMenubar
Removed CWnd::IsMDIChild
Removed CWnd::IsMDIFrame
Removed CWnd::IsRebar
Removed CWnd::IsStatusbar
Removed CWnd::IsTab
Removed CWnd::IsTabbedMDI
Removed CWnd::IsToolbar

Modified Browser Sample

Version 6.8
===========

New Features
------------
* Support has been added for the Windows Ribbon Framework available on 
   Windows 7 operating systems. The RibbonFrame and RibbonSimple samples 
   demonstrates how to implelement the ribbon. RibbonFrame reverts back to 
   using the traditional Toolbar and Menubar if the operating system doesn't
   support the ribbon framework.
   
* Helper classes have been added for the standard controls, namely the Button,
   Edit, Listbox, and Static controls.
   
* Dockers can now be hidden and unhidden. Refer to the Splitter sample for a
   demonstration of this feature.
   
* Modal dialogs now support pretranslated messages.          


Changes
-------
Added CButton class
Added CEdit class
Added CListBox class
Added CRibbon class
Added CRibbonFrame class
Added CStatic class
Removed CSplitter class
Renamed ThemeMenu to MenuTheme
Renamed ThemeRebar to RebarTheme
Renamed ThemeToolbar to ToolbarTheme

Added CDocker::Dock
Added CDocker::DockInContainer
Added CDocker::Hide
Added CDocker::Undock
Added CDocker::UndockContainer

Added CFrame::GetRebarTheme
Added CFrame::GetToolbarTheme
Added CFrame::GetMRUEntries
Renamed CFrame::GetThemeMenu to CFrame::GetMenuTheme

Added UWM_GETMENUTHEME     message
Added UWM_GETREBARTHEME    message 
Added UWM_GETTOOLBARTHEME  message

Added RibbonFrame sample
Added RibbonSimple sample

Added 'Compile VS2005 Express'  tool
Added 'Compile VS2008 Express'  tool
Added 'Compile VS2010 Express'  tool

Added PreTranslate Message support for modal dialogs

Bug Fixes
---------
- Fixed TCharToString